--- a/src/Wheel/WheelFortune.css
+++ b/src/Wheel/WheelFortune.css
@@ -23,3 +23,9 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
+
+.arrowPicture{
+    position: relative;
+    top: 2%;
+    left: 86%;
+}
